--- a/card.scss
+++ b/card.scss
@@ -1,9 +1,12 @@
+$font-stack: "DM Mono", monospace;
+$color-dark: #17141d;
+
 body {
   padding: 0;
   margin: 0;
-  background-color: #17141d;
+  background-color: $color-dark;
   color: white;
-  font-family: "DM Mono", monospace;
+  font-family: $font-stack;
 }
 
 .card-list {
@@ -19,8 +22,7 @@ body {
   width: 400px;
   min-width: 250px;
   padding: 1.5rem;
+
   border-radius: 16px;
   box-shadow: -1rem 0 3rem black;
 }
-
-/*# sourceMappingURL=card.css.map */
