--- a/card.scss
+++ b/card.scss
@@ -45,7 +45,20 @@ body {
   width: 400px;
   min-width: 250px;
   padding: 1.5rem;
-
+  background-color: $color-dark;
   border-radius: 16px;
   box-shadow: -1rem 0 3rem black;
+  transition: 0.2s;
+
+  &:hover {
+    transform: translateY(-1rem);
+
+    & ~ .card {
+      transform: translateX(130px);
+    }
+  }
+
+  &:not(:first-child) {
+    margin-left: -130px;
+  }
 }
