--- a/card.css
+++ b/card.css
@@ -32,8 +32,19 @@ body {
   width: 400px;
   min-width: 250px;
   padding: 1.5rem;
+  background-color: #17141d;
   border-radius: 16px;
   box-shadow: -1rem 0 3rem black;
+  transition: 0.2s;
+}
+.card:hover {
+  transform: translateY(-1rem);
+}
+.card:hover ~ .card {
+  transform: translateX(130px);
+}
+.card:not(:first-child) {
+  margin-left: -130px;
 }
 
 /*# sourceMappingURL=card.css.map */
