--- a/card.scss
+++ b/card.scss
@@ -1,10 +1,12 @@
 $font-stack: "DM Mono", monospace;
-$color-dark: #17141d;
+$color-background: #17141d;
+$color-semi-circle: #ff8a00;
+$color-author: #7a7a8c;
 
 body {
   padding: 0;
   margin: 0;
-  background-color: $color-dark;
+  background-color: $color-background;
   color: white;
   font-family: $font-stack;
 }
@@ -45,7 +47,7 @@ body {
   width: 400px;
   min-width: 250px;
   padding: 1.5rem;
-  background-color: $color-dark;
+  background-color: $color-background;
   border-radius: 16px;
   box-shadow: -1rem 0 3rem black;
   transition: 0.2s;
@@ -61,4 +63,40 @@ body {
   &:not(:first-child) {
     margin-left: -130px;
   }
+}
+
+.card-author {
+  position: relative;
+  display: grid;
+  grid-template-columns: 75px 1fr;
+  align-items: center;
+  margin: 3rem 0 0;
+}
+
+.author-avatar img {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  // blacn and white
+  filter: grayscale(100%);
+  margin: 16px 10px;
+}
+
+.half-circle {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 60px;
+  height: 48px;
+  fill: none;
+  stroke: $color-semi-circle;
+  stroke-width: 8;
+  stroke-linecap: round;
+}
+
+.author-name-prefix {
+  font-style: normal;
+  font-weight: 700;
+  color: $color-author;
 }
