--- a/card.css
+++ b/card.css
@@ -74,12 +74,33 @@ body {
   stroke: #ff8a00;
   stroke-width: 8;
   stroke-linecap: round;
+  pointer-events: none;
 }
 
 .author-name-prefix {
   font-style: normal;
   font-weight: 700;
   color: #7a7a8c;
+}
+
+.tags {
+  margin: 1rem 0 2rem;
+  padding: 0.5rem 0 1rem;
+  line-height: 2;
+  margin-bottom: 0;
+}
+.tags a {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 0.5rem;
+  color: #7a7a8c;
+  text-transform: uppercase;
+  font-size: 0.66rem;
+  border: 3px solid #28242f;
+  border-radius: 2rem;
+  padding: 0.2rem 0.85rem 0.25rem;
+  position: relative;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=card.css.map */
