--- a/card.scss
+++ b/card.scss
@@ -1,7 +1,7 @@
 $font-stack: "DM Mono", monospace;
 $color-background: #17141d;
 $color-semi-circle: #ff8a00;
-$color-author: #7a7a8c;
+$color-gray: #7a7a8c;
 
 body {
   padding: 0;
@@ -93,10 +93,32 @@ body {
   stroke: $color-semi-circle;
   stroke-width: 8;
   stroke-linecap: round;
+  pointer-events: none;
 }
 
 .author-name-prefix {
   font-style: normal;
   font-weight: 700;
-  color: $color-author;
+  color: $color-gray;
+}
+
+.tags {
+  margin: 1rem 0 2rem;
+  padding: 0.5rem 0 1rem;
+  line-height: 2;
+  margin-bottom: 0;
+
+  a {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 0.5rem;
+    color: #7a7a8c;
+    text-transform: uppercase;
+    font-size: 0.66rem;
+    border: 3px solid #28242f;
+    border-radius: 2rem;
+    padding: 0.2rem 0.85rem 0.25rem;
+    position: relative;
+    text-decoration: none;
+  }
 }
