--- a/card.css
+++ b/card.css
@@ -47,12 +47,15 @@ body {
   margin-left: -130px;
 }
 
+.card-header {
+  flex: 1;
+}
+
 .card-author {
   position: relative;
   display: grid;
   grid-template-columns: 75px 1fr;
   align-items: center;
-  margin: 3rem 0 0;
 }
 
 .author-avatar img {
@@ -84,6 +87,8 @@ body {
 }
 
 .tags {
+  display: flex;
+  flex-wrap: wrap;
   margin: 1rem 0 2rem;
   padding: 0.5rem 0 1rem;
   line-height: 2;
@@ -101,6 +106,7 @@ body {
   padding: 0.2rem 0.85rem 0.25rem;
   position: relative;
   text-decoration: none;
+  margin: 1px;
 }
 
 /*# sourceMappingURL=card.css.map */
