--- a/card.scss
+++ b/card.scss
@@ -2,6 +2,15 @@ $font-stack: "DM Mono", monospace;
 $color-background: #17141d;
 $color-semi-circle: #ff8a00;
 $color-gray: #7a7a8c;
+$gradient: linear-gradient(90deg, #ff8a00, #e52e71);
+
+@mixin gradient {
+  background: $gradient;
+  text-shadow: none;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
 
 body {
   padding: 0;
@@ -67,6 +76,26 @@ body {
 
 .card-header {
   flex: 1;
+
+  p {
+    font-size: 14px;
+    margin: 0 0 1rem;
+    color: $color-gray;
+  }
+
+  h2 {
+    font-size: 20px;
+    margin: 0.25rem 0 auto;
+    text-decoration: none;
+    color: inherit;
+    border: 0;
+    display: inline-block;
+    cursor: pointer;
+
+    &:hover {
+      @include gradient();
+    }
+  }
 }
 
 .card-author {
@@ -126,5 +155,10 @@ body {
     position: relative;
     text-decoration: none;
     margin: 1px;
+
+    &:hover {
+      @include gradient();
+      border-color: white;
+    }
   }
 }
